# fancydiff

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  Setup.hs  fancydiff.cabal  fancydiff.rb  stack.yaml  version.sh
app/: Main.hs
app/Internal/: .gitignore  Opts.hs
app/Lib/: Git.hs  Process.hs
doc/: compilation-from-source.md  git-configuration.md
packaging/: .gitignore  build-sdeb  build-srpm  darwin  fancydiff.deb.spec  fancydiff.rpm.spec  fancydiff.spec
src/Fancydiff/: AnsiFormatting.hs  Data.hs  DiffHighlight.hs  Formatting.hs  HTMLFormatting.hs  Lexer.x  Lib.hs  Rendering.hs  SourceHighlight.hs  Themes.hs
src/Lib/: DList.hs  Regex.hs  Text.hs
test/: .gitignore  Spec.hs  Test.hs
test/expected/langs/: clang.c.flist  haskell.hs.flist  javascript.js.flist
test/langs/: clang.c  haskell.hs  javascript.js
