name:                fancydiff
version:             0.1.3
synopsis:            Fancy coloring of diffs for Git
description:         Please see README.md
homepage:            http://github.com/da-x/fancydiff#readme
license:             BSD3
license-file:        LICENSE
author:              Dan Aloni
maintainer:          alonid@gmail.com
copyright:           2016 Dan Aloni
category:            Console
build-type:          Custom
cabal-version:       >=1.10

flag static
  manual: True
  default: False

library
  hs-source-dirs:      src
  ghc-options:        -Wall -O2 -rtsopts
  exposed-modules:     Lib.Text
                     , Fancydiff.Lib
                     , Fancydiff.AnsiFormatting
                     , Fancydiff.SourceHighlight
                     , Fancydiff.Data
                     , Fancydiff.Formatting
  other-modules:       Fancydiff.Lexer
                     , Fancydiff.DiffHighlight
                     , Fancydiff.Themes
                     , Lib.Regex
                     , Lib.DList
  build-depends:       array           >= 0.5.1.0
                     , base            >= 4.7 && < 5
                     , bytestring      >= 0.10.6.0
                     , containers      >= 0.5.6.2
                     , dlist           >= 0.7.1.2
                     , filepath
                     , gitlib          == 3.1.1.1
                     , gitlib-libgit2  == 3.1.1.1
                     , hex
                     , lifted-base     >= 0.2.3.6
                     , monad-control   >= 1.0.0.4
                     , patience        >= 0.1.1
                     , regex-base      >= 0.93.2
                     , regex-tdfa      >= 1.2.1
                     , regex-tdfa-text >= 1.0.0.3
                     , text            >= 1.2.2.0
                     , transformers    >= 0.4.2.0
  build-tools:         happy, alex
  default-language:    Haskell2010

executable fancydiff
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -rtsopts
  other-modules:       Internal.Version
                     , Paths_fancydiff
  build-depends:       array          >= 0.5.1.0
                     , base
                     , bytestring     >= 0.10.6.0
                     , containers     >= 0.5.6.2
                     , dlist          >= 0.7.1.2
                     , fancydiff
                     , gitlib         >= 3.1.1
                     , gitlib-libgit2 >= 3.1.1
                     , lifted-base    >= 0.2.3.6
                     , monad-control  >= 1.0.0.4
                     , optparse-applicative
                     , process         >= 1.2.3.0
                     , text           >= 1.2.2.0
                     , transformers   >= 0.4.2.0
  default-language:    Haskell2010
  if flag(static)
      ld-options: -v

test-suite fancydiff-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , containers >= 0.5.6.2
                     , fancydiff
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/da-x/fancydiff
