name:                fancydiff
version:             0.2.2
synopsis:            Fancy coloring of diffs for Git
description:         Please see README.md
homepage:            http://github.com/da-x/fancydiff#readme
license:             BSD3
license-file:        LICENSE
author:              Dan Aloni
maintainer:          alonid@gmail.com
copyright:           2016 Dan Aloni
category:            Console
build-type:          Custom
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:        -Wall -O2 -rtsopts
  exposed-modules:     Lib.Text
                     , Fancydiff.Lib
                     , Fancydiff.AnsiFormatting
                     , Fancydiff.HTMLFormatting
                     , Fancydiff.SourceHighlight
                     , Fancydiff.Data
                     , Fancydiff.Formatting
                     , Fancydiff.Themes
  other-modules:       Fancydiff.Lexer
                     , Fancydiff.DiffHighlight
                     , Fancydiff.Rendering
                     , Lib.Regex
                     , Lib.DList
  build-depends:       array           >= 0.5.1.0
                     , base            >= 4.7 && < 5
                     , blaze-html
                     , bytestring      >= 0.10.6.0
                     , containers      >= 0.5.6.2
                     , deepseq >= 1.4.1.1
                     , deepseq-generics
                     , dlist           >= 0.7.1.2
                     , filepath
                     , gitlib          == 3.1.1.1
                     , gitlib-libgit2  == 3.1.1.1
                     , hex
                     , lifted-base     >= 0.2.3.6
                     , monad-control   >= 1.0.0.4
                     , patience        >= 0.1.1
                     , regex-base      >= 0.93.2
                     , regex-tdfa      >= 1.2.1
                     , regex-tdfa-text >= 1.0.0.3
                     , text            >= 1.2.2.0
                     , transformers    >= 0.4.2.0
                     , vector          >= 0.11.0.0
  build-tools:         happy, alex
  default-language:    Haskell2010

executable fancydiff
  hs-source-dirs:      app
                     , test
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -rtsopts
  other-modules:       Internal.Version
                     , Paths_fancydiff
                     , Spec
                     , Internal.Opts
                     , Lib.Process
                     , Lib.Git
  build-depends:       ansi-terminal  >= 0.6.2.3
                     , array          >= 0.5.1.0
                     , base
                     , bytestring     >= 0.10.6.0
                     , containers     >= 0.5.6.2
                     , deepseq >= 1.4.1.1
                     , deepseq-generics
                     , directory      >= 1.2.2.0
                     , dlist          >= 0.7.1.2
                     , exceptions     >= 0.8.2.1
                     , fancydiff
                     , filepath
                     , gitlib         >= 3.1.1
                     , gitlib-libgit2 >= 3.1.1
                     , lens           >= 4.13
                     , lifted-base    >= 0.2.3.6
                     , monad-control  >= 1.0.0.4
                     , mtl            >= 2.2.1
                     , optparse-applicative
                     , process        >= 1.2.3.0
                     , process-extras >= 0.3.3.7
                     , temporary      >= 1.2.0.4
                     , text           >= 1.2.2.0
                     , transformers   >= 0.4.2.0
                     , vector         >= 0.11.0.0
                     , yaml           >= 0.8.15.3
  default-language:    Haskell2010

test-suite fancydiff-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:       Paths_fancydiff
  build-depends:       base
                     , deepseq >= 1.4.1.1
                     , filepath
                     , process
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/da-x/fancydiff
